[gd_scene load_steps=2 format=3 uid="uid://dr1sfrt7valh4"]

[ext_resource type="Script" path="res://src/ui/game_over.gd" id="1_bewau"]

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bewau")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Game Over:
You "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="VBoxContainer/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Restart Game"

[node name="QuitButton" type="Button" parent="VBoxContainer/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Options/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options/QuitButton" to="." method="_on_quit_button_pressed"]
